updated introduction and file structur

--- a/SubBox/wwwroot/localbrowser.html
+++ b/SubBox/wwwroot/localbrowser.html
@@ -2,315 +2,12 @@
 <html>
 <head>
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <script src="/vue.min.js"></script>
+    <link rel="stylesheet" href="css/localbrowser.css">
+    <script src="js/vue.min.js"></script>
     <meta charset="utf-8" />
     <title>SubBox Nighty</title>
-    <style>
-        body {
-            font-family: 'Roboto', sans-serif;
-            font-size: 16px;
-            width: 100%;
-            height: 100%;
-            color: #fafafa;
-            background: #0d0d0d;
-            padding: 0;
-            margin: 0;
-            -moz-user-select: none;
-            -webkit-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
-        }
-
-        #app {
-            height: 500px;
-        }
-
-        p {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-        }
-
-        video {
-            width: 60%;
-            box-shadow: 0 0 20px -5px rgba(0, 0, 0, 1);
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-
-            table td {
-                max-width: 265px;
-                line-height: 16px;
-            }
-
-        nav {
-            display: flex;
-            align-items: center;
-            position: absolute;
-            margin: 0;
-            width: 200px;
-            height: 32px;
-            border-bottom-right-radius: 5px;
-            background: linear-gradient(to right, #8f54f1, #8fa5f1, #00bf9f);
-            background-position: left;
-            background-size: 200%;
-            padding: 5px;
-            transition: 1s;
-            cursor: default;
-        }
-
-            nav p {
-                margin-left: 5px;
-                font-size: 20px;
-            }
-
-            nav:hover {
-                background-position: right;
-                transition: 1s;
-            }
-
-        input {
-            width: 250px;
-            background: none;
-            border-image: linear-gradient(to top right, #8f54f1, #00efbf);
-            border-image-slice: 1;
-            border-style: solid;
-            border-width: 1px;
-            color: #ffffff;
-            font-size: 16px;
-            padding: 5px;
-        }
-
-            input:hover, input:focus {
-                border-image: linear-gradient(to top right,#ff7500,#ce01ff);
-                border-image-slice: 1;
-                border-style: solid;
-                border-width: 1px;
-            }
-
-        .grid {
-            z-index: 2;
-            display: inline-grid;
-            grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
-            grid-auto-rows: 240px;
-            grid-gap: 20px;
-            align-items: start;
-            align-content: start;
-            width: 90%;
-            margin-left: 5%;
-            margin-top: 60px;
-        }
-
-        .gridVideo {
-            border-radius: 0;
-            width: 320px;
-            height: 256px;
-            border-image: linear-gradient(to top right, #8f54f1, #00efbf);
-            border-image-slice: 1;
-            border-style: solid;
-            border-width: 3px;
-            cursor: default;
-            height: 180px;
-            transition: 0.2s;
-        }
-
-            .gridVideo:hover {
-                border-image: linear-gradient(to top right,#ff7500,#ce01ff);
-                border-image-slice: 1;
-                border-style: solid;
-                border-width: 3px;
-                height: 238px;
-                transition: 0.2s;
-            }
-
-                .gridVideo:hover .infoBox {
-                    opacity: 100%;
-                    margin-top: 0;
-                    transition: opacity 0.3s;
-                }
-
-        .channelPic {
-            border-radius: 100%;
-            width: 32px;
-            height: 32px;
-            margin-top: -5px;
-        }
-
-        .infoBox {
-            opacity: 0%;
-            margin-top: -100px;
-            padding: 6px;
-            align-items: center;
-            display: flex;
-        }
-
-        .videoTitle {
-            display: inline-block;
-            margin-left: 5px;
-            font-weight: bold;
-            width: 100%;
-            font-size: 15px;
-        }
-
-        .videoThumbDiv {
-            position: relative;
-            cursor: pointer;
-        }
-
-        .videoThumb {
-            width: 320px;
-            height: 180px;
-        }
-
-        .videoThumbDuration {
-            font-size: 12px;
-            font-weight: 500;
-            bottom: 6px;
-            right: 3px;
-            color: white;
-            background: rgba(0,0,0,0.8);
-            position: absolute;
-            padding-left: 4px;
-            padding-right: 4px;
-            padding-top: 2px;
-            padding-bottom: 2px;
-            border-radius: 2px;
-        }
-
-        .channelTitle {
-            display: inline-block;
-            margin-left: 5px;
-            margin-top: -50px;
-            width: 100%;
-            color: #b8b8b8;
-            font-size: 15px;
-        }
-
-        .titleBox {
-            display: flex;
-            justify-content: center;
-            padding: 4px;
-        }
-
-        .videoOverlay {
-            z-index: 3;
-            position: absolute;
-            display: flex;
-            flex-direction: column;
-            width: 100%;
-            height: 100%;
-            align-items: center;
-            justify-content: center;
-            backdrop-filter: blur(60px);
-        }
-
-        .emptyOverlay {
-            z-index: 4;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            margin-top: 50px;
-            height: 90%;
-        }
-
-            .emptyOverlay p {
-                font-size: 26px;
-                font-weight: bold;
-            }
-
-        .navigationBox {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            width: 60%;
-            padding: 5px;
-        }
-
-            .navigationBox button {
-                border: none;
-                background: linear-gradient(to right, #009f5f, #008f5f, #118f9f, #117fbf);
-                background-position: left;
-                background-size: 200%;
-                transition: 0.5s;
-                color: #fafafa;
-                font-family: 'Roboto', sans-serif;
-                font-size: 16px;
-                font-weight: bold;
-                padding: 2px 10px 2px 10px;
-                margin: 0 5px 0 5px;
-            }
-
-            .navigationBox button:hover {
-                background-position: right;
-                box-shadow: 0 0 15px -5px #117fbf;
-                transition: 0.5s;
-            }
-
-            .navigationBox .deleteButton {
-                background: linear-gradient(to right, #cf006f, #db4437, #db4437);
-                background-position: left;
-                background-size: 200%;
-            }
-
-            .navigationBox .deleteButton:hover {
-                box-shadow: 0 0 15px -5px #db4437;
-                background-position: right;
-            }
-
-            .navigationBox p {
-                cursor: default;
-                float: left;
-                background: linear-gradient(to right, #5f94f1, #00efbf);
-                background-clip: text;
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
-
-        .exitButton {
-            cursor: pointer;
-            position: absolute;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            right: 0;
-            height: 40px;
-            width: 150px;
-            font-size: 20px;
-            margin-right: 0;
-            margin-top: 0;
-            border: none;
-            background: linear-gradient(to right, #131313 50%, #db4437 50%);
-            background-size: 200%;
-            background-position: left;
-            color: #fafafa;
-            border-bottom-left-radius: 5px;
-            transition: 0.5s;
-        }
-
-            .exitButton:hover {
-                color: #fafafa;
-                background: linear-gradient(to right, #131313 50%, #db4437 50%);
-                background-size: 200%;
-                background-position: right;
-                transition: 0.5s;
-            }
-
-        .filterDiv {
-            position: absolute;
-            display: flex;
-            top: 5px;
-            left: calc(50% - 125px);
-            width: 250px;
-        }
-
-    </style>
 </head>
+
 <body>
     <div id="app">
         <nav>
@@ -365,96 +62,6 @@
         </div>
     </div>
 
-    <script>
-        var app = new Vue({
-            data: {
-                videos: [],
-                filter: "",
-                selectedDir: "",
-                selectedThumbDir: "",
-                selectedSize: 0,
-            },
-            computed: {
-                filteredVideos: function () {
-                    if (this.filter === "") {
-                        return this.videos;
-                    }
-
-                    console.log("ok");
-
-                    filterUp = this.filter.toUpperCase();
-
-                    return this.videos.filter(function (u) {
-                        return (u.Value.data.title + u.Value.data.description + u.Value.data.channelTitle).toUpperCase().includes(filterUp);
-                    });
-                },
-            },
-            methods: {
-                async update() {
-                    var result = await fetch("/api/values/localvideos");
-
-                    this.videos = await result.json();
-                },
-                async select(video) {  
-                    window.scrollTo(0, 0);
-
-                    document.body.style.overflow = "hidden";
-
-                    this.selectedDir = video.Value.dir; 
-
-                    this.selectedThumbDir = video.Value.thumbDir;
-
-                    this.selectedSize = Math.round(video.Value.size / (1024 * 1024) * 10) / 10;
-
-                    document.getElementsByTagName('video')[0].volume = 0.1;
-                },
-                async deleteVideo() {
-                    var re = new RegExp('\\\\', 'g');
-
-                    await fetch("/api/values/localvideo/" + this.selectedDir.replace(re,'*') + "/" + this.selectedThumbDir.replace(re,'*'), { method: "DELETE" }); 
-
-                    this.back();
-
-                    this.update();
-                },
-                back() {
-                    this.selectedDir = "";
-
-                    document.body.style.overflow = "auto";
-                },
-                GetURLParameter(sParam) {
-                    var sPageURL = window.location.search.substring(1);
-
-                    var sURLVariables = sPageURL.split('&');
-
-                    for (var i = 0; i < sURLVariables.length; i++) 
-                    {
-                        var sParameterName = sURLVariables[i].split('=');
-
-                        if (sParameterName[0] == sParam) 
-                        {
-                            return sParameterName[1];
-                        }
-                    }
-
-                    return null;
-                },
-            },
-            el: "#app",
-            async mounted() {
-                await this.update();
-
-                var openId = this.GetURLParameter('id');
-                
-                if (openId !== null) {
-                    var video = this.videos.find((v) => v.Value.data.id == openId);
-
-                    if (video !== undefined) {
-                        this.select(video);
-                    }   
-                }
-            }
-        });
-    </script>
+    <script src="js/localbrowser.js"></script>
 </body>
 </html>
